S4_FIX_CSS-style-loading-search-bar-filters-inputs: Scroll bar in dark mode fix

--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -2260,6 +2260,23 @@ body.not-scrollable {
 }
 
 body.dark-theme {
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    background: $color--grey--900;
+    border: 1px solid $color--grey--800;
+  }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: $color--grey--600;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: $color--grey--500;
+  }
+}
+
+body.dark-theme {
   &::-webkit-scrollbar {
     width: 10px;
   }
